--- a/vueudemy/package.json
+++ b/vueudemy/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
+    "vue-property-decorator": "^4.0.0",
     "vue-router": "^2.3.0"
   },
   "devDependencies": {
